--- a/include/create_live_ignition.yaml
+++ b/include/create_live_ignition.yaml
@@ -1,36 +1,39 @@
 - name: Build temp directory
-  file:
+  ansible.builtin.file:
     path: "{{ files_dir }}/fcct_fragment_read"
     state: directory
+    mode: "0755"
 
 - name: Copy fragments to read directory
-  copy:
+  ansible.builtin.copy:
     src: "{{ item }}"
     dest: "{{ files_dir }}/fcct_fragment_read/{{ ansible_loop.index }}.yml"
+    mode: "0644"
   loop: "{{ additional_ignition_fragments }}"
   loop_control:
-    extended: yes
+    extended: true
 
 - name: Read FCCT Fragments into Ansible
-  include_vars:
+  ansible.builtin.include_vars:
     dir: "{{ files_dir }}/fcct_fragment_read"
     name: additional_ignition
 
 - name: Debug ignition
-  debug:
-   var: additional_ignition
+  ansible.builtin.debug:
+    var: additional_ignition
 
 - name: Remove temp directory
-  file:
+  ansible.builtin.file:
     path: "{{ files_dir }}/fcct_fragment_read"
     state: absent
 
 - name: Render Combined FCCT Config
-  template:
+  ansible.builtin.template:
     src: fcct-wrapper.yaml.j2
-    dest: "{{files_dir}}/combined-fcct.fcc"
+    dest: "{{ files_dir }}/combined-fcct.fcc"
+    mode: "0644"
 
 - name: Generate Combined Ignition
-  shell: |
+  ansible.builtin.shell: |
     #!/bin/bash
-    podman run -i --rm {{fcct_image}} --pretty --strict < {{files_dir}}/combined-fcct.fcc > {{files_dir}}/combined-ignition.ign
+    podman run -i --rm {{ fcct_image }} --pretty --strict < {{ files_dir }}/combined-fcct.fcc > {{ files_dir }}/combined-ignition.ign
