--- a/include/enable_disk_encryption.yaml
+++ b/include/enable_disk_encryption.yaml
@@ -1,23 +1,25 @@
 - name: Render Butane Fragment (Worker)
-  template:
+  ansible.builtin.template:
     src: worker-encryption.yaml.j2
-    dest: "{{files_dir}}/worker-encryption.bu"
+    dest: "{{ files_dir }}/worker-encryption.bu"
+    mode: "0644"
   when: encrypt_worker_disks
 
 - name: Render Butane Fragment (Master)
-  template:
+  ansible.builtin.template:
     src: master-encryption.yaml.j2
-    dest: "{{files_dir}}/master-encryption.bu"
+    dest: "{{ files_dir }}/master-encryption.bu"
+    mode: "0644"
   when: encrypt_master_disks
 
 - name: Generate Encryption Ignition (Worker)
-  shell: |
+  ansible.builtin.shell: |
     #!/bin/bash
-    podman run -i --rm {{fcct_image}} --pretty --strict < {{files_dir}}/worker-encryption.bu > {{installer_dir}}/openshift/99-worker-encryption.yaml
+    podman run -i --rm {{ fcct_image }} --pretty --strict < {{ files_dir }}/worker-encryption.bu > {{ installer_dir }}/openshift/99-worker-encryption.yaml
   when: encrypt_worker_disks
 
 - name: Generate Encryption Ignition (Master)
-  shell: |
+  ansible.builtin.shell: |
     #!/bin/bash
-    podman run -i --rm {{fcct_image}} --pretty --strict < {{files_dir}}/master-encryption.bu > {{installer_dir}}/openshift/99-master-encryption.yaml
+    podman run -i --rm {{ fcct_image }} --pretty --strict < {{ files_dir }}/master-encryption.bu > {{ installer_dir }}/openshift/99-master-encryption.yaml
   when: encrypt_master_disks
