--- a/include/hpe_tools_install.yaml
+++ b/include/hpe_tools_install.yaml
@@ -1,44 +1,45 @@
 - name: Wait for RHCOS to come up
-  wait_for_connection:
+  ansible.builtin.wait_for_connection:
     delay: 120
     timeout: 600
-  when: hpe_tools_delay is not defined or hpe_tools_delay == true
+  when: hpe_tools_delay is not defined or hpe_tools_delay
 
 - name: Wait ten minutes for first-boot RHCOS upgrade
-  wait_for:
+  ansible.builtin.wait_for:
     timeout: 600
-  when: hpe_tools_delay is not defined or hpe_tools_delay == true
+  when: hpe_tools_delay is not defined or hpe_tools_delay
   delegate_to: localhost
 
 - name: Wait for RHCOS to come up
-  wait_for_connection:
+  ansible.builtin.wait_for_connection:
     delay: 120
     timeout: 600
-  when: hpe_tools_delay is not defined or hpe_tools_delay == true
+  when: hpe_tools_delay is not defined or hpe_tools_delay
 
 - name: Deploy HPE Tools Repo Config
   become: true
-  template:
+  ansible.builtin.template:
     src: hpe-repos.j2
     dest: /etc/yum.repos.d/hpe.repo
+    mode: "0644"
 
 - name: Clear rpm-ostree repo metadata
   become: true
-  shell: "rpm-ostree cleanup -m"
+  ansible.builtin.shell: "rpm-ostree cleanup -m"
 
 - name: Install packages via rpm-ostree
   become: true
-  shell: "rpm-ostree install {{ hpe_tools_packages|join(' ') }}"
+  ansible.builtin.shell: "rpm-ostree install {{ hpe_tools_packages | join(' ') }}"
 
 - name: Reboot server
-  reboot:
+  ansible.builtin.reboot:
     reboot_timeout: 1200
   become: true
 
 - name: Enable services
   become: true
-  systemd:
+  ansible.builtin.systemd:
     enabled: true
     state: started
-    name: "{{item}}"
-  loop: "{{hpe_tools_services|default([])}}"
+    name: "{{ item }}"
+  loop: "{{ hpe_tools_services | default([]) }}"
