--- a/include/installer_customization_patch.yaml
+++ b/include/installer_customization_patch.yaml
@@ -1,12 +1,13 @@
 - name: Render FCCT Fragment
-  template:
+  ansible.builtin.template:
     src: installer-customization.bu.j2
-    dest: "{{files_dir}}/installer-customization-fragment.yaml"
+    dest: "{{ files_dir }}/installer-customization-fragment.yaml"
+    mode: "0644"
 
 - name: Save fragment path
-  set_fact:
-    inst_customize_fragment_path: "{{files_dir}}/installer-customization-fragment.yaml"
+  ansible.builtin.set_fact:
+    inst_customize_fragment_path: "{{ files_dir }}/installer-customization-fragment.yaml"
 
 - name: Register FCCT Fragment
-  set_fact:
+  ansible.builtin.set_fact:
     additional_ignition_fragments: "{{ additional_ignition_fragments + [inst_customize_fragment_path] }}"
