--- a/install_hpe_tools.yml
+++ b/install_hpe_tools.yml
@@ -1,10 +1,12 @@
 ---
-- hosts: all
+- name: Install HPE tools
+  hosts: all
   gather_facts: true
   become: true
   vars:
     hpe_tools_delay: false
+
   tasks:
-  - name: Install HPE Tools
-    include_tasks: include/hpe_tools_install.yaml
-    when: pm_type is defined and pm_type == "ilo"
+    - name: Install HPE Tools
+      ansible.builtin.include_tasks: include/hpe_tools_install.yaml
+      when: pm_type is defined and pm_type == "ilo"
